tests/sksl/errors/UnscopedVariableInDoWhile.glsl
### Compilation failed:

error: 2: variable 'foo' must be created in a scope
1 error
